# Offhand

./: CMakeLists.txt  LICENSE  README.md  mod.json
.github/workflows/: build.yml
src/: dllmain.cpp  minhook.h
